新版格式化引擎重构